--- a/VodafoneWeb/Views/UsersAdmin/Create.cshtml
+++ b/VodafoneWeb/Views/UsersAdmin/Create.cshtml
@@ -12,11 +12,17 @@
     <hr />
     @Html.ValidationSummary("", new { @class = "text-error" })
     <div class="form-group">
+        @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
+        </div>
+    </div>
+    @*<div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
-    </div>
+    </div>*@
     <div class="form-group">
         @Html.LabelFor(model => model.Address, new { @class = "control-label col-md-2" })
         <div class="col-md-10">
