Implementing Dealer Selection feature once login and add dealer,product management in

--- a/VodafoneWeb/Views/Dealers/Index.cshtml
+++ b/VodafoneWeb/Views/Dealers/Index.cshtml
@@ -1,17 +1,11 @@
 ﻿@model IEnumerable<VodafoneWeb.Models.Dealer>
 
 @{
-    Layout = null;
+    ViewBag.Title = "Dealer Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
+<h2>Dealer Index</h2>
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
@@ -49,5 +43,3 @@
     }
     
     </table>
-</body>
-</html>
