--- a/VodafoneWeb/Views/Shared/_Layout.cshtml
+++ b/VodafoneWeb/Views/Shared/_Layout.cshtml
@@ -36,6 +36,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Sales", "Index", "Sales")</li>
+                    <li>@Html.ActionLink("Inventory", "Index", "Inventory")</li>
                     <li>@Html.ActionLink("Dealer", "Index", "Dealers")</li>
                     <li>@Html.ActionLink("Product", "Index", "Products")</li>
 
