Dealer selection is now integrated with sales entry object

--- a/VodafoneWeb/Views/Dealers/SelectDealer.cshtml
+++ b/VodafoneWeb/Views/Dealers/SelectDealer.cshtml
@@ -1,5 +1,6 @@
-﻿@using VodafoneWeb.Models
-@model IEnumerable<VodafoneWeb.Models.Dealer>
+﻿@using System.Activities.Expressions
+@using VodafoneWeb.Models
+@model IEnumerable<VodafoneWeb.Models.DealerViewModel>
 
 @using (Html.BeginForm())
 {
@@ -12,9 +13,9 @@
         <div class="form-group">
             <div class="col-md-10">
                 @(Html.Kendo().DropDownList()
-                      .Name("dealerDropDownList") //The name of the dropdownlist is mandatory. It specifies the "id" attribute of the widget.
-                      .DataTextField("Name") //Specifies which property of the Product to be used by the dropdownlist as a text.
-                      .DataValueField("ID") //Specifies which property of the Product to be used by the dropdownlist as a value.
+              .Name("DealerId") //The name of the dropdownlist is mandatory. It specifies the "id" attribute of the widget.
+              .DataTextField("DealerName") //Specifies which property of the Product to be used by the dropdownlist as a text.
+              .DataValueField("DealerId") //Specifies which property of the Product to be used by the dropdownlist as a value.
                       .BindTo(Model) //Pass the list of Dealers to the dropdownlist.
                       .SelectedIndex(0) //Select an item with index 0\. Note that the indexes are zero based.
                       )
