--- a/VodafoneWeb/Views/Dealers/_SelectedDealer.cshtml
+++ b/VodafoneWeb/Views/Dealers/_SelectedDealer.cshtml
@@ -1,5 +1,5 @@
 ﻿@model VodafoneWeb.Models.Dealer
 
 <h1>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</h1>
-@Html.DisplayFor(x => x.Name)
+@Html.DisplayFor(x => x.DealerName)
 
