--- a/VodafoneWeb/Views/Dealers/Delete.cshtml
+++ b/VodafoneWeb/Views/Dealers/Delete.cshtml
@@ -14,11 +14,11 @@
         <hr />
         <dl class="dl-horizontal">
             <dt>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.DealerName)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.Name)
+                @Html.DisplayFor(model => model.DealerName)
             </dd>
     
             <dt>
