--- a/VodafoneWeb/Views/Dealers/Details.cshtml
+++ b/VodafoneWeb/Views/Dealers/Details.cshtml
@@ -13,11 +13,11 @@
         <hr />
         <dl class="dl-horizontal">
             <dt>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.DealerName)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.Name)
+                @Html.DisplayFor(model => model.DealerName)
             </dd>
     
             <dt>
@@ -39,7 +39,7 @@
         </dl>
     </div>
     <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+        @Html.ActionLink("Edit", "Edit", new { id = Model.DealerId }) |
         @Html.ActionLink("Back to List", "Index")
     </p>
 </body>
