--- a/VodafoneWeb/Views/Dealers/Edit.cshtml
+++ b/VodafoneWeb/Views/Dealers/Edit.cshtml
@@ -20,13 +20,13 @@
             <h4>Dealer</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.ID)
+            @Html.HiddenFor(model => model.DealerId)
     
             <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.DealerName, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.DealerName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.DealerName, "", new { @class = "text-danger" })
                 </div>
             </div>
     
