--- a/VodafoneWeb/Views/Dealers/Index.cshtml
+++ b/VodafoneWeb/Views/Dealers/Index.cshtml
@@ -12,7 +12,7 @@
     <table class="table">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.DealerName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DealerCode)
@@ -26,7 +26,7 @@
     @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.DealerName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DealerCode)
@@ -35,9 +35,9 @@
                 @Html.DisplayFor(modelItem => item.IsActive)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+                @Html.ActionLink("Edit", "Edit", new { id = item.DealerId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.DealerId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.DealerId })
             </td>
         </tr>
     }
