--- a/VodafoneWeb/Views/Account/Login.cshtml
+++ b/VodafoneWeb/Views/Account/Login.cshtml
@@ -36,10 +36,10 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
+                        @*<div class="checkbox">
                             @Html.CheckBoxFor(m => m.RememberMe)
                             @Html.LabelFor(m => m.RememberMe)
-                        </div>
+                        </div>*@
                     </div>
                 </div>
                 <div class="form-group">
@@ -47,19 +47,19 @@
                         <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
-                <p>
+                @*<p>
                     @Html.ActionLink("Register a new user?", "Register")
                 </p>
                 <p>
                     @Html.ActionLink("Forget your password?", "ForgotPassword")
-                </p>
+                </p>*@
             }
         </section>
     </div>
     <div class="col-md-4">
-        <section id="socialLoginForm">
+        @*<section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new VodafoneWeb.Models.ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
+        </section>*@
     </div>
 </div>
 @section Scripts {
