--- a/VodafoneWeb/Views/Categories/Delete.cshtml
+++ b/VodafoneWeb/Views/Categories/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model VodafoneWeb.Models.Product
+﻿@model VodafoneWeb.Models.Category
 
 @{
     ViewBag.Title = "Delete";
@@ -9,16 +9,17 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Product</h4>
+    <h4>Category</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.CategoryName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.CategoryName)
         </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.IsActive)
         </dt>
