--- a/VodafoneWeb/Views/Categories/Details.cshtml
+++ b/VodafoneWeb/Views/Categories/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model VodafoneWeb.Models.Product
+﻿@model VodafoneWeb.Models.Category
 
 @{
     ViewBag.Title = "Details";
@@ -8,16 +8,17 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Product</h4>
+    <h4>Category</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.CategoryName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.CategoryName)
         </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.IsActive)
         </dt>
@@ -29,6 +30,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.CategoryId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
