--- a/VodafoneWeb/Views/Plans/Delete.cshtml
+++ b/VodafoneWeb/Views/Plans/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model VodafoneWeb.Models.Product
+﻿@model VodafoneWeb.Models.Plan
 
 @{
     ViewBag.Title = "Delete";
@@ -9,16 +9,33 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Product</h4>
+    <h4>Plan</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Category.CategoryName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Category.CategoryName)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PlanName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PlanName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.OfferCode)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.OfferCode)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.IsActive)
         </dt>
