--- a/VodafoneWeb/Views/Shared/_Layout.cshtml
+++ b/VodafoneWeb/Views/Shared/_Layout.cshtml
@@ -18,7 +18,8 @@
 	<script src="@Url.Content("~/Scripts/kendo/2015.2.624/jszip.min.js")"></script>
 	<script src="@Url.Content("~/Scripts/kendo/2015.2.624/kendo.all.min.js")"></script>
 	<script src="@Url.Content("~/Scripts/kendo/2015.2.624/kendo.aspnetmvc.min.js")"></script>
-	<script src="@Url.Content("~/Scripts/kendo.modernizr.custom.js")"></script>
+    <script src="@Url.Content("~/Scripts/kendo.modernizr.custom.js")"></script>
+    <style>.k-edit-form-container { width: auto;}</style>
 </head>
 <body>
 <div class="navbar navbar-inverse navbar-fixed-top">
@@ -67,5 +68,6 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     @RenderSection("styles", required: false)
+
 </body>
 </html>
