--- a/VodafoneWeb/Views/Shared/EditorTemplates/InventoryPopupEditView.cshtml
+++ b/VodafoneWeb/Views/Shared/EditorTemplates/InventoryPopupEditView.cshtml
@@ -46,16 +46,16 @@
         };
     }
 </script>
-<div style="overflow: scroll; height: 600px; width: 500px">
+<div style="overflow: scroll; height: 670px; width: 600px; padding-left: 3px">
     <fieldset>
         <legend>New Record</legend>
-        <div style="float: left; width: 55%; overflow: hidden;">
+        <div style="float: left; width: 52%; overflow: hidden;">
             <dl>
                 <dt>
                     @Html.LabelFor(m => m.IMEI):
                 </dt>
                 <dd>
-                    @Html.TextBoxFor(m => m.IMEI)
+                    @Html.TextBoxFor(m => m.IMEI, new { @class = "wide" })
                 </dd>
             </dl>
             <dl>
@@ -73,6 +73,7 @@
                               dataSource.Read(read => read.Action("GetProductCategories", "Inventory"))
                                   .ServerFiltering(true);
                           })
+                          .HtmlAttributes(new { @class = "wide" })
                     )
                     @Html.ValidationMessageFor(m => m.ProductCategoryId)
                 </dd>
@@ -93,6 +94,7 @@
                                   .ServerFiltering(true);
                           })
                           .CascadeFrom("ProductCategoryId")
+                          .HtmlAttributes(new { @class = "wide" })
                           )
                     @Html.ValidationMessageFor(m => m.ProductId)
                 </dd>
@@ -104,6 +106,7 @@
                 <dd>
                     @(
     Html.Kendo().DropDownListFor(m => m.Type)
+        .HtmlAttributes(new { @class = "wide" })
         .DataTextField("Text")
         .DataValueField("Value")
         .BindTo(HelperMethods.EnumToSelectList(typeof (InventoryType)))
@@ -119,7 +122,7 @@
             @Html.LabelFor(m => m.PurchasedFrom)
         </dt>
         <dd>
-            @Html.TextBoxFor(m => m.PurchasedFrom)
+            @Html.TextBoxFor(m => m.PurchasedFrom, new { @class = "wide" })
         </dd>
     </dl>
     <dl>
@@ -139,6 +142,7 @@
                                   dataSource.Read(read => read.Action("GetUsers", "Inventory"))
                                       .ServerFiltering(true);
                               })
+                              .HtmlAttributes(new { @class = "wide" })
             )
             @Html.ValidationMessageFor(m => m.PurchasedById)
         </dd>
@@ -150,7 +154,7 @@
                     @Html.LabelFor(m => m.DefferCode)
                 </dt>
                 <dd>
-                    @Html.TextBoxFor(m => m.DefferCode)
+                    @Html.TextBoxFor(m => m.DefferCode, new { @class = "wide" })
                 </dd>
             </dl>
             <dl>
@@ -158,7 +162,7 @@
                     @Html.LabelFor(m => m.DefferName)
                 </dt>
                 <dd>
-                    @Html.TextBoxFor(m => m.DefferName)
+                    @Html.TextBoxFor(m => m.DefferName, new { @class = "wide" })
                 </dd>
             </dl>
             <dl>
@@ -166,7 +170,7 @@
                     @Html.LabelFor(m => m.DefferOrderNo)
                 </dt>
                 <dd>
-                    @Html.TextBoxFor(m => m.DefferOrderNo)
+                    @Html.TextBoxFor(m => m.DefferOrderNo, new { @class = "wide" })
                 </dd>
             </dl>
         </div>
@@ -183,5 +187,10 @@ input[type="text"]{
           -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
+}
+
+.wide
+{
+     width: 245px;
 }
 </style>
